--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                   <p>
                     I am a Ph.D student in Computer Vision at <a href="https://www.upm.es/">UPM</a>, supervised by <a
                       href="https://portalcientifico.upm.es/es/ipublic/researcher/309256">Dr. José Luis Blanco
-                      Murillo</a>, and member of <a href="https://www.gaps.ssr.upm.es/">GAPS</a> research group since
-                    September 2022.
+                      Murillo</a>, and, since September 2022, member of <a href="https://www.gaps.ssr.upm.es/">GAPS</a> research group.
                   </p>
                   <p style="text-align:center">
                     <a href="data/Resume_JG.pdf">Resume</a>
@@ -107,6 +106,46 @@
           </table>
 
 
+          <tr onmouseout="speech_stop()" onmouseover="speech_start()">
+                <td style="padding:16px;width:20%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two" id='speech_image'>
+                      <img src='images/speech_after.jpg' width=100% alt="Speech visualization">
+                    </div>
+                    <img src='images/speech_before.jpg' width=100% alt="Speech placeholder">
+                  </div>
+                  <script type="text/javascript">
+                    function speech_start() {
+                      document.getElementById('speech_image').style.opacity = "1";
+                    }
+                    function speech_stop() {
+                      document.getElementById('speech_image').style.opacity = "0";
+                    }
+                    speech_stop()
+                  </script>
+                </td>
+                <td style="padding:8px;width:80%;vertical-align:middle">
+                  <a href="#">
+                    <span class="papertitle">Open-Source System for Multilingual Translation and Cloned Speech
+                      Synthesis</span>
+                  </a>
+                  <br>
+                  Mateo Cámara,
+                  <strong>Juan Gutiérrez</strong>,
+                  María Pilar Daza,
+                  José Luis Blanco
+                  <br>
+                  <em>Forum Acusticum / Euronoise 2025</em>, Málaga, Spain
+                  <br>
+                  <a href="#">paper</a>
+                  <p></p>
+                  <p>
+                    Presented at Euronoise 2025, detailing a system for multilingual translation and cloned speech
+                    synthesis.
+                  </p>
+                </td>
+              </tr>
+
 
 
           <table
@@ -149,92 +188,6 @@
                   <p>
                     Developed efficient cross-modal attention mechanisms for aligning voice, text, and image modalities
                     to reduce compute overhead during pre-training.
-                  </p>
-                </td>
-              </tr>
-
-
-              <tr onmouseout="speech_stop()" onmouseover="speech_start()">
-                <td style="padding:16px;width:20%;vertical-align:middle">
-                  <div class="one">
-                    <div class="two" id='speech_image'>
-                      <img src='images/speech_after.jpg' width=100% alt="Speech visualization">
-                    </div>
-                    <img src='images/speech_before.jpg' width=100% alt="Speech placeholder">
-                  </div>
-                  <script type="text/javascript">
-                    function speech_start() {
-                      document.getElementById('speech_image').style.opacity = "1";
-                    }
-                    function speech_stop() {
-                      document.getElementById('speech_image').style.opacity = "0";
-                    }
-                    speech_stop()
-                  </script>
-                </td>
-                <td style="padding:8px;width:80%;vertical-align:middle">
-                  <a href="#">
-                    <span class="papertitle">Open-Source System for Multilingual Translation and Cloned Speech
-                      Synthesis</span>
-                  </a>
-                  <br>
-                  Mateo Cámara,
-                  <strong>Juan Gutiérrez</strong>,
-                  María Pilar Daza,
-                  José Luis Blanco
-                  <br>
-                  <em>Forum Acusticum / Euronoise 2025</em>, Málaga, Spain
-                  <br>
-                  <a href="#">paper</a>
-                  <p></p>
-                  <p>
-                    Presented at Euronoise 2025, detailing a system for multilingual translation and cloned speech
-                    synthesis.
-                  </p>
-                </td>
-              </tr>
-
-
-              <tr onmouseout="mining_stop()" onmouseover="mining_start()">
-                <td style="padding:16px;width:20%;vertical-align:middle">
-                  <div class="one">
-                    <div class="two" id='mining_image'>
-                      <img src='images/mining_after.jpg' width=100% alt="Mining visualization">
-                    </div>
-                    <img src='images/mining_before.jpg' width=100% alt="Mining placeholder">
-                  </div>
-                  <script type="text/javascript">
-                    function mining_start() {
-                      document.getElementById('mining_image').style.opacity = "1";
-                    }
-                    function mining_stop() {
-                      document.getElementById('mining_image').style.opacity = "0";
-                    }
-                    mining_stop()
-                  </script>
-                </td>
-                <td style="padding:8px;width:80%;vertical-align:middle">
-                  <a href="#">
-                    <span class="papertitle">Data Integration and Analytics of Cone Crusher Responses</span>
-                  </a>
-                  <br>
-                  G. Asbjörnsson,
-                  M. Evertsson,
-                  P. Plaza,
-                  S. Rodríguez-Jiménez,
-                  J. Gavilanes,
-                  J. Cortón-González,
-                  <strong>Juan Gutiérrez</strong>,
-                  J. L. Blanco,
-                  J. E. Ortiz
-                  <br>
-                  <em>14th International Comminution Symposium (Comminution '25)</em>, Cape Town, 2025
-                  <br>
-                  <a href="#">paper</a>
-                  <p></p>
-                  <p>
-                    Part of the DigiEcoQuarry project: design and validation of an integrated digital quarry system
-                    through multimodal sensing and AI-based decision support.
                   </p>
                 </td>
               </tr>
@@ -317,10 +270,9 @@
                 <td style="padding:8px; width:80%; vertical-align:middle;">
                   <strong>Teaching Assistant</strong>
                   <br>
-                  - Design of Communications Systems and Equipment (M.S in Signal Theory and Communications, 1st course,
-                  UPM)
+                  - Design of Communications Systems and Equipment (M.S in Signal Theory and Communications, 1st course, UPM)
                   <br>
-                  - Computing and Visualization Tools (B.S in Telecommunication Engineering, 2nd course)
+                  - Computing and Visualization Tools (B.S in Telecommunication Engineering, 2nd course, UPM)
                   <br>
                   <br>
                   <strong>Thesis Supervisor</strong>
@@ -340,6 +292,21 @@
                   Madrid, Spain)
                   <br>
                   - Using Agnostic Models on Image and Text to Support Video Annotation (AIAI 2023, León, Spain)
+                </td>
+              </tr>
+
+              <tr>
+                <td align="center"
+                  style="background-color: #b8c4d4; border-radius: 12px; width:20%; vertical-align:middle; padding:16px;">
+                  <h2 style="margin:0; color: #333;">Short Papers</h2>
+                </td>
+
+                <td style="padding:8px; width:80%; vertical-align:middle;">
+                   <a href="https://www.min-eng.com/comminution25/drafts/session2/asbjornsson.pdf">Data Integration and Analytics of Cone Crusher Responses</a>
+                  <br>
+                  G. Asbjörnsson, M. Evertsson, P. Plaza, S. Rodríguez-Jiménez, J. Gavilanes, J. Cortón-González, <strong>Juan Gutiérrez</strong>, J. L. Blanco, J. E. Ortiz
+                  <br>
+                  <em>14th International Comminution Symposium (Comminution '25)</em>, Cape Town, 2025
                 </td>
               </tr>
 
