--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <br>
                     <em>Forum Acusticum / Euronoise 2025</em>, Málaga, Spain
                     <br>
-                    <a href="https://arxiv.org/abs/2507.02530">paper</a> |
+                    <a href="https://arxiv.org/abs/2507.02530">arXiv</a> |
                     <a href="data/euronoise.bib" download>bibtex</a>
                     <p></p>
                     <p>
