--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
 
 
 
-
-
-
-
 <body>
   <table
     style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -50,10 +46,7 @@
                       Murillo</a>, and, since September 2022, member of <a href="https://www.gaps.ssr.upm.es/">GAPS</a> research group.
                   </p>
                   <p style="text-align:center">
-                    <a href="data/Resume_JG.pdf">Resume</a>
-                    &nbsp; | &nbsp;
-                    <a href="https://x.com/jgnav_">X</a>
-                    &nbsp; | &nbsp;
+                    
                     <a href="https://scholar.google.es/citations?user=wT7WzX8AAAAJ&hl=es&authuser=1">Scholar</a>
                     &nbsp; | &nbsp;
                     <a href="https://github.com/jgnav">GitHub</a>
@@ -63,6 +56,10 @@
                     <a href="https://orcid.org/0009-0001-6827-5153">ORCID</a>
                     &nbsp; | &nbsp;
                     <a href="https://www.linkedin.com/in/juan-gutierrez-navarro/">LinkedIn</a>
+                    &nbsp; | &nbsp;
+                    <a href="https://x.com/jgnav_">X</a>
+                    &nbsp; | &nbsp;
+                    <a href="data/Resume_JG.pdf">CV</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
