--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <script>
   const authorURLs = {
     mateoCamara: "https://mateocamara.com/",
-    joseLuisBlanco: "https://portalcientifico.upm.es/es/ipublic/researcher/309256"
+    joseLuisBlanco: "https://portalcientifico.upm.es/es/ipublic/researcher/309256",
+    victorGutierrez: "https://vgutierrez2404.github.io/"
   };
 </script>
 
@@ -46,7 +47,10 @@
                       Murillo</a>, and, since September 2022, member of <a href="https://www.gaps.ssr.upm.es/">GAPS</a> research group.
                   </p>
                   <p style="text-align:center">
+
                     
+                    <a href="data/Resume_JG.pdf">Resume</a>
+                    &nbsp; | &nbsp;
                     <a href="https://scholar.google.es/citations?user=wT7WzX8AAAAJ&hl=es&authuser=1">Scholar</a>
                     &nbsp; | &nbsp;
                     <a href="https://github.com/jgnav">GitHub</a>
@@ -58,8 +62,6 @@
                     <a href="https://www.linkedin.com/in/juan-gutierrez-navarro/">LinkedIn</a>
                     &nbsp; | &nbsp;
                     <a href="https://x.com/jgnav_">X</a>
-                    &nbsp; | &nbsp;
-                    <a href="data/Resume_JG.pdf">CV</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
@@ -91,6 +93,86 @@
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
+
+
+              <tr onmouseout="hitl_stop()" onmouseover="hitl_start()" bgcolor="#ffffd0">
+                <td style="padding:16px;width:20%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two" id='hitl_image'>
+                      <img src='images/hitl_after.png' width=100% alt="HITL visualization">
+                    </div>
+                    <img src='images/hitl_before.png' width=100% alt="HITL placeholder">
+                  </div>
+                  <script type="text/javascript">
+                    function hitl_start() {
+                      document.getElementById('hitl_image').style.opacity = "1";
+                    }
+                    function hitl_stop() {
+                      document.getElementById('hitl_image').style.opacity = "0";
+                    }
+                    hitl_stop()
+                  </script>
+                </td>
+                <td style="padding:8px;width:80%;vertical-align:middle">
+                  <a href="data/hitl.pdf">
+                    <span class="papertitle">An Evaluation of Hybrid Annotation Workflows on High-Ambiguity Spatiotemporal Video Footage</span>
+                  </a>
+                  <br>
+                  <strong>Juan Gutiérrez</strong>,
+                  <a class="author-victor">Víctor Gutiérrez-García</a>,
+                  Ángel Mora-Sánchez,
+                  Silvia Rodríguez-Jiménez,
+                  <a class="author-joseluis">José Luis Blanco-Murillo</a>
+                  <br>
+                  <em>Preprint</em>, 2026
+                  <br>
+                  <a href="data/hitl.pdf">pdf</a> |
+                  <a href="javascript:void(0)" class="bibtex-link" onclick="showBibtexModal('data/hitl.bib')">bibtex</a>
+                  <p></p>
+                  <p>
+                    Benchmarking assisted annotation workflows using fine-tuned vision-language models for video, demonstrating significant time reduction in human-in-the-loop labeling.
+                  </p>
+                </td>
+              </tr>
+
+
+              <tr onmouseout="panc_stop()" onmouseover="panc_start()" bgcolor="#ffffd0">
+                <td style="padding:16px;width:20%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two" id='panc_image'>
+                      <img src='images/panc_after.png' width=100% alt="PANC visualization">
+                    </div>
+                    <img src='images/panc_before.png' width=100% alt="PANC placeholder">
+                  </div>
+                  <script type="text/javascript">
+                    function panc_start() {
+                      document.getElementById('panc_image').style.opacity = "1";
+                    }
+                    function panc_stop() {
+                      document.getElementById('panc_image').style.opacity = "0";
+                    }
+                    panc_stop()
+                  </script>
+                </td>
+                <td style="padding:8px;width:80%;vertical-align:middle">
+                  <a href="data/panc.pdf">
+                    <span class="papertitle">PANC: Prior-Aware Normalized Cut for Object Segmentation</span>
+                  </a>
+                  <br>
+                  <strong>Juan Gutiérrez</strong>,
+                  <a class="author-victor">Víctor Gutiérrez</a>,
+                  <a class="author-joseluis">José Luis Blanco</a>
+                  <br>
+                  <em>Preprint</em>, 2026
+                  <br>
+                  <a href="data/panc.pdf">pdf</a> |
+                  <a href="javascript:void(0)" class="bibtex-link" onclick="showBibtexModal('data/panc.bib')">bibtex</a>
+                  <p></p>
+                  <p>
+                    A weakly supervised spectral segmentation framework using minimal annotated visual tokens to produce stable, controllable object masks.
+                  </p>
+                </td>
+              </tr>
 
 
             <tr onmouseout="speech_stop()" onmouseover="speech_start()">
@@ -326,6 +408,7 @@
 <script>
   document.querySelectorAll('.author-mateo').forEach(el => el.href = authorURLs.mateoCamara);
   document.querySelectorAll('.author-joseluis').forEach(el => el.href = authorURLs.joseLuisBlanco);
+  document.querySelectorAll('.author-victor').forEach(el => el.href = authorURLs.victorGutierrez);
 
   // BibTeX Modal Functions
   function showBibtexModal(bibPath) {
