--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                   <br>
                   <em>Preprint</em>, 2026
                   <br>
-                  <a href="data/hitl.pdf">pdf</a> |
-                  <a href="javascript:void(0)" class="bibtex-link" onclick="showBibtexModal('data/hitl.bib')">bibtex</a>
+                  <a href="data/hitl.pdf">pdf</a> 
+                  <!-- | <a href="javascript:void(0)" class="bibtex-link" onclick="showBibtexModal('data/hitl.bib')">bibtex</a> -->
                   <p></p>
                   <p>
-                    Benchmarking assisted annotation workflows using fine-tuned vision-language models for video, demonstrating significant time reduction in human-in-the-loop labeling.
+                    Benchmarking assisted annotation workflows using fine-tuned vision-language models for video.
                   </p>
                 </td>
               </tr>
@@ -165,11 +165,11 @@
                   <br>
                   <em>Preprint</em>, 2026
                   <br>
-                  <a href="data/panc.pdf">pdf</a> |
-                  <a href="javascript:void(0)" class="bibtex-link" onclick="showBibtexModal('data/panc.bib')">bibtex</a>
+                  <a href="data/panc.pdf">pdf</a> 
+                  <!-- | <a href="javascript:void(0)" class="bibtex-link" onclick="showBibtexModal('data/panc.bib')">bibtex</a> -->
                   <p></p>
                   <p>
-                    A weakly supervised spectral segmentation framework using minimal annotated visual tokens to produce stable, controllable object masks.
+                    A weakly-supervised spectral segmentation framework using minimal annotated visual tokens to produce stable, controllable object masks.
                   </p>
                 </td>
               </tr>
@@ -279,8 +279,7 @@
 
                 <td style="padding:8px;width:80%;vertical-align:middle">
                   <a href="https://oa.upm.es/75341/">
-                    <span class="papertitle">Study for the Development of a Video Annotation Support System Using an
-                      Agnostic Image Model</span>
+                    <span class="papertitle">A Study on the Development of a Video Annotation Support System Using an Image- and Text-Agnostic Model</span>
                   </a>
                   <br>
                   <strong>Juan Gutiérrez</strong>
