--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                   <br>
                   <em>Distributed Computing and Artificial Intelligence (DCAI)</em>, 2024 (Springer LNCS, 2025)
                   <br>
-                  <a href="https://link.springer.com/chapter/10.1007/978-3-031-80946-0_1">paper</a> |
+                  <a href="https://link.springer.com/chapter/10.1007/978-3-031-80946-0_1">springer</a> |
                   <a href="javascript:void(0)" class="bibtex-link" onclick="showBibtexModal('data/dcai.bib')">bibtex</a>
                   <p></p>
                   <p>
